<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lin_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_back_black_7f"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/lin_candraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_candraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_control_tools_02" />

                <TextView
                    android:id="@+id/txt_candraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/candraw"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_up_sd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_up_sd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_control_down" />

                <TextView
                    android:id="@+id/txt_up_sd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/down_std"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_video_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_control_camera_02" />

                <TextView
                    android:id="@+id/txt_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_off"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_control_mute" />

                <TextView
                    android:id="@+id/txt_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_audio"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_gift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_gift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_control_gift" />

                <TextView
                    android:id="@+id/txt_gift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_gift"
                    android:textColor="#FFFFFF" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin_plit_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_plit_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_screen_normal" />

                <TextView
                    android:id="@+id/txt_plit_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plitscreen"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/right_arr"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignBaseline="@id/lin_center"
            android:layout_toRightOf="@id/lin_center"
            android:alpha="0.5"
            android:src="@drawable/right_arr" />
    </LinearLayout>


    <ImageView
        android:id="@+id/down_arr"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@id/lin_center"
        android:alpha="0.5"
        android:src="@drawable/down_arr" />


</RelativeLayout>