<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#3C3C3C"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#242424"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/txt_close_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:text="@string/close"
            android:textColor="#AAAAAA"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/chat"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/iv_chat"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dp"
            android:scaleType="fitXY"
            android:src="@drawable/chat_normal" />

        <ImageView
            android:id="@+id/iv_broad"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="80dp"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/keybraod"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/send"
            android:textColor="#FCD000"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:textColor="@android:color/white"
            android:background="#4c4c4c"
            android:id="@+id/edt_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="8"
            android:padding="10dp"
            android:scrollbars="vertical" />
    </LinearLayout>

</LinearLayout>